tests/EtaX/EtaX.meth2/EtaX.meth2.03.check
// src:   val t4d: () => Any = meth2() _ // ok
// 2.13-base ok
// 2.13-head ok    <no change>
// 2.13-new  ok    <no change>
// 3.0-old   ok    <no change>
// 3.0       ok    <no change>
// 3.1-migr  warn
-- Migration Warning: target/tests/EtaX/EtaX.meth2.03.scala:12:31 --------------
12 |  val t4d: () => Any = meth2() _ // ok
   |                       ^^^^^^^^^
   |                       The syntax `<function> _` is no longer supported;
   |                       you can use `(() => <function>())` instead
1 warning found

// 3.1       error
-- Error: target/tests/EtaX/EtaX.meth2.03.scala:12:31 --------------------------
12 |  val t4d: () => Any = meth2() _ // ok
   |                       ^^^^^^^^^
   |                       The syntax `<function> _` is no longer supported;
   |                       you can use `(() => <function>())` instead
1 error found


ok    ok    ok    ok    ok    warn  error
